--- a/COPY/Minecraft-Overviewer-minecraft113-fixed/overviewer_core/data/web_assets/overviewer.css
+++ b/COPY/Minecraft-Overviewer-minecraft113-fixed/overviewer_core/data/web_assets/overviewer.css
@@ -56,10 +56,10 @@ body {
     line-height: 160%;
     text-align: center;
     padding: 0px 6px;
-
+    
     background-image: url('control-bg.png');
     background-repeat: repeat-x;
-
+    
     border: 1px solid #A9BBDF;
     border-radius: 2px 2px;
     box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px;
@@ -81,11 +81,11 @@ body {
 .customControl > div.dropDown {
     font-size: 12px;
     background-color: white;
-
+    
     border: 1px solid #A9BBDF;
     border-radius: 2px 2px;
     box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px;
-
+    
     display: none;
 }
 
@@ -143,7 +143,7 @@ div#searchDropDown {
 
 div.searchResultItem  {
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis;    
 }
 
 div.searchResultItem img {
@@ -165,9 +165,22 @@ div.worldcontrol select {
     font-size: 1.2em;
 }
 
-.leaflet-control-container .progress.leaflet-control {
+.leaflet-container .coordbox, .leaflet-container .progress {
+    box-shadow: none;
+    font-size: 11px;
     background: rgba(255, 255, 255, 0.7);
     margin: 0;
     padding: 0 5px;
     color: #333;
+}
+
+.ov-marker {
+    position:relative;
+    margin-left:-50%;
+    margin-top:-50%;
+}
+
+.leaflet-div-icon {
+    background: 0;
+    border: 0;
 }
